Copyright (C) 2017 Alpha Griffin
@%@~LICENSE~@%@

saw_040917_2 - Fix for Python 2.7: skipping the enum, using simple names instead.

saw_040917_1 - Improved formatting and new enum type for setting log level (fixes #44 and #45).

saw_031517_3 - Merge pyproject for new doc theme.

saw_031517_2 - Fixing docstrings.

saw_031517_1 - Merge pyproject and add some more documentation.

saw_031417_4 - Bumping to beta status.

saw_031417_3 - Another merge and some fixing.

saw_031417_4 - Will just have to do without the friendly error check.

saw_031417_2 - Rebuild apidoc.

saw_031417_1 - Merge pyproject 0.0.2.

saw_021817_1 - Initial commit for logging system.
